# KalshiBot

./: .gitignore  README.md
.cursor/agents/: architect.md
.cursor/rules/: compound-engineering.mdc  deployment-phases.mdc
apps/bot/: .env.example  kalshi_markets.txt.example  pyproject.toml  requirements.txt
apps/bot/bot/: __init__.py  config.py  main.py
apps/bot/bot/clients/: kalshi_rest.py  kalshi_ws.py  odds_api.py  supabase_client.py
apps/bot/bot/loops/: executor.py  fetcher.py  strategy.py
apps/bot/bot/repositories/: db.py
apps/bot/bot/scripts/: __init__.py  discover_markets.py  import_kalshi_markets.py
apps/bot/bot/services/: kalshi_markets.py  odds_math.py  risk.py  scheduler.py
apps/bot/tests/: test_odds_math.py  test_risk.py  test_scheduler.py
apps/web/: .env.example  next.config.js  package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/auth/signout/: route.ts
apps/web/src/app/dashboard/: layout.tsx  page.tsx
apps/web/src/app/dashboard/config/: page.tsx
apps/web/src/app/dashboard/fills/: page.tsx
apps/web/src/app/dashboard/mappings/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/components/: config-form.tsx  data-table.tsx  kalshi-import-panel.tsx  mapping-panel.tsx
apps/web/src/lib/: database.types.ts
apps/web/src/lib/supabase/: client.ts  middleware.ts  server.ts
docs/: architecture.md  rollout-phases.md  security.md  setup.md
supabase/: config.toml
supabase/migrations/: 20250620000000_initial_schema.sql  20250621000000_grant_is_allowed_user_execute.sql
(+5 files in other folders)
