[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kalshibot"
version = "0.1.0"
description = "Kalshi World Cup trading bot worker"
requires-python = ">=3.11"
dependencies = [
  "supabase>=2.9.0",
  "httpx>=0.28.0",
  "websockets>=14.0",
  "cryptography>=44.0.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
